[package]
name = "http-server-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = {version = "1.0.197" , features=["derive"]}
chrono = "0.4.37"
futures-util = "0.3.30"
mongodb = "2.8.2"
